<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EasyABC</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="textView1">Welcome to EasyABC</string>
    <string name="button1">Learn Alphabet</string>
    <string name="button2">Deal with Numbers</string>
    <string name="button3">Shapes anywhere</string>
       
    <string name="alpha1">A</string>
    <string name="alpha2">B</string>
    <string name="alpha3">C</string>
    <string name="alpha4">D</string>
    <string name="alpha5">E</string>   
    <string name="alpha6">F</string>
    <string name="alpha7">G</string>
    <string name="alpha8">H</string>
    <string name="alpha9">I</string>
    <string name="alpha10">J</string>
    <string name="alpha11">K</string>
    <string name="alpha12">L</string>
    <string name="alpha13">M</string>
    <string name="alpha14">N</string>
    <string name="alpha15">O</string>
    <string name="alpha16">P</string>
    <string name="alpha17">Q</string>
    <string name="alpha18">R</string>
    <string name="alpha19">S</string>
    <string name="alpha20">T</string>
    <string name="alpha21">U</string>
    <string name="alpha22">V</string>
    <string name="alpha23">W</string>
    <string name="alpha24">X</string>
    <string name="alpha25">Y</string>
    <string name="alpha26">Z</string>
    
    
    
    
    <string name="but1"></string>
    <string name="but2"></string>
    <string name="but3"></string>
    <string name="but4"></string>
    <string name="but5"></string>
    <string name="but6"></string>
    <string name="but7"></string>
    <string name="but8"></string>
    <string name="but9"></string>
    
    
    
    <string name="title_activity_third">ThirdActivity</string>
    
    
    <string name="textView2">Let`s count from 1 to 10</string>
    <string name="button4">Click the buttons to hear the sounds.</string>
    
    
    

</resources>